# furniture_segmentation

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: furniture_segmentation_service_container.py  main.py
app/config/: config.py  logger.py
app/config/yaml/: dev.yaml
app/core/: errors.py  furniture_segmentation_service.py  schemas.py
app/io/gateway/: furniture_segmentation_gateway.py
app/io/web/: routers.py
